Corrindo falhas na  responsividade

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <main>
 
-        <header>
+        <header class="container">
             <img src="img/logo_oi.png" alt="Logotipo Oi Vantagens">
 
             <span>
@@ -103,7 +103,7 @@
             </p>
         </section>
 
-        <section class="lojas container">
+        <section class="lojas">
 
             <div class="bahia">
                 <img src="img/smartphone.png" alt="Imagem de um Smartphone">
